force-app/main/default/objects/Case/fields/education_you_have_completed__c.field-meta.xml
<CustomField>
    <fullName>education_you_have_completed__c</fullName>
    <label>education you have completed?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>