force-app/main/default/objects/Case/fields/experience__c.field-meta.xml
<CustomField>
    <fullName>experience__c</fullName>
    <label>experience</label>
    <length>20</length>
    <type>Text</type>
</CustomField>