force-app/main/default/objects/Case/fields/sales_areas_are_you_experienced_in__c.field-meta.xml
<CustomField>
    <fullName>sales_areas_are_you_experienced_in__c</fullName>
    <label>sales areas are you experienced in?</label>
    <length>30</length>
    <type>Text</type>
</CustomField>